--- a/dolgozat/feladatkiiras/feladatkiiras.tex
+++ b/dolgozat/feladatkiiras/feladatkiiras.tex
@@ -4,11 +4,11 @@
 \end{center}
 \vspace*{2cm}
 
-Alulírott \textbf{Varga Dániel}; Neptun-kód: \texttt{DVJYP8} a Miskolci Egyetem Gépészmérnöki és Informatikai Karának végzõs gazdasági informatikus szakos hallgatója ezennel büntetõjogi és fegyelmi felelõsségem tudatában nyilatkozom és aláírásommal igazolom, hogy
+Alulírott \textbf{Varga Dániel}; Neptun-kód: \texttt{DVJYP8} a Miskolci Egyetem Gépészmérnöki és Informatikai Karának végzõs gazdasági informatikus szakos hallgatója ezennel bün\-te\-tő\-jo\-gi és fegyelmi felelõsségem tudatában nyilatkozom és aláírásommal igazolom, hogy
 \textit{
 Integrált fejlesztőkörnyezet készítése a Rust programozási nyelvhez
 }
-címû szakdolgozatom/diplomatervem saját, önálló munkám; az abban hivatkozott szakirodalom
+című szak\-dol\-go\-za\-tom/dip\-lo\-ma\-ter\-vem saját, önálló munkám; az abban hivatkozott szakirodalom
 felhasználása a forráskezelés szabályai szerint történt.\\
 
 Tudomásul veszem, hogy szakdolgozat esetén plágiumnak számít:
