Ő betűk javítása, felesleges include kommentelése.

--- a/dolgozat/dolgozat.tex
+++ b/dolgozat/dolgozat.tex
@@ -16,7 +16,7 @@
 
 \pagestyle{fancy}
 
-\include{fejezetek/bevezetes}
+%\include{fejezetek/bevezetes}
 
 \include{fejezetek/1_bevezetes}
 \include{fejezetek/2_rust}
