--- a/dolgozat/feladatkiiras/feladatkiiras.tex
+++ b/dolgozat/feladatkiiras/feladatkiiras.tex
@@ -4,7 +4,7 @@
 \end{center}
 \vspace*{2cm}
 
-Alulírott \textbf{Varga Dániel}; Neptun-kód: \texttt{DVJYP8} a Miskolci Egyetem Gépészmérnöki és Informatikai Karának végzõs gazdasági informatikus szakos hallgatója ezennel bün\-te\-tő\-jo\-gi és fegyelmi felelõsségem tudatában nyilatkozom és aláírásommal igazolom, hogy
+Alulírott \textbf{Varga Dániel}; Neptun-kód: \texttt{DVJYP8} a Miskolci Egyetem Gépészmérnöki és Informatikai Karának végzős gazdasági informatikus szakos hallgatója ezennel bün\-te\-tő\-jo\-gi és fegyelmi felelősségem tudatában nyilatkozom és aláírásommal igazolom, hogy
 \textit{
 Integrált fejlesztőkörnyezet készítése a Rust programozási nyelvhez
 }
@@ -13,7 +13,7 @@ felhasználása a forráskezelés szabályai szerint történt.\\
 
 Tudomásul veszem, hogy szakdolgozat esetén plágiumnak számít:
 \begin{itemize}
-\item szószerinti idézet közlése idézõjel és hivatkozás megjelölése nélkül;
+\item szószerinti idézet közlése idézőjel és hivatkozás megjelölése nélkül;
 \item tartalmi idézet hivatkozás megjelölése nélkül;
 \item más publikált gondolatainak saját gondolatként való feltüntetése.
 \end{itemize}
