Bevezetés, első verzió.

--- a/dolgozat/fejezetek/2_rust.tex
+++ b/dolgozat/fejezetek/2_rust.tex
@@ -1,4 +1,5 @@
 \Chapter{A Rust programozási nyelv}
+\label{sec:rust}
 
 % TODO: Leírni a nyelv szerepét, létrejöttének történetét, jellemző felhasználási módjait!
 
