Források kimozgatása az irodalomjegyzékbe.

--- a/dolgozat/fejezetek/1_bevezetes.tex
+++ b/dolgozat/fejezetek/1_bevezetes.tex
@@ -11,21 +11,21 @@ A szövegszerkesztőknél meg kell említenünk, hogy ma már a legtöbbjük int
 \Section{IDE-k Rust-ban}
 \label{sec:ides}
 
-Mint azt már említettük, sok szövegszerkesztő ajánl IDE-szerű szolgáltatásokat Rust-hoz. A Rust közössége ezeket le is jegyzi, és egy nyilvánosan elérhető, \emph{Are we (I)DE yet?}\footnote{\texttt{https://areweideyet.com/}} című weboldalon összegezi.
+Mint azt már említettük, sok szövegszerkesztő ajánl IDE-szerű szolgáltatásokat Rust-hoz. A Rust közössége ezeket le is jegyzi, és egy nyilvánosan elérhető, \emph{Are we (I)DE yet?}\cite{ideyet} című weboldalon összegezi.
 
 Mint azt a weboldalon láthatjuk, támogatás a Rust-hoz elérhető a legelterjettebb szövegszerkesztőkben, mint az Atom, Sublime Text, Visual Studio Code, stb. A leg\-u\-tób\-bi kiemelendő, mivel a táblázat alapján látszólag minden meg van benne.
 
-A szövegszerkesztők egyszerre több nyelvhez tudnak ilyen szolgáltatásokat nyújtani. Bár néhány szolgáltatás a szövegszerkesztőtől magától függ csak, a legtöbbhöz se\-gít\-sé\-get nyújt egy \emph{nyelvszerver} (\emph{language server}). A nyelvszerver egy olyan szoftver, ami a \emph{nyelvszerver protokoll}\footnote{\emph{Language Server Protocol}, \texttt{https://microsoft.github.io/language-server-protocol/}} alapján információt nyújt IDE-knek, szövegszerkesztőknek, és egyéb programoknak a hozzá tartozó nyelvről.
+A szövegszerkesztők egyszerre több nyelvhez tudnak ilyen szolgáltatásokat nyújtani. Bár néhány szolgáltatás a szövegszerkesztőtől magától függ csak, a legtöbbhöz se\-gít\-sé\-get nyújt egy \emph{nyelvszerver} (\emph{language server}). A nyelvszerver egy olyan szoftver, ami a \emph{nyelvszerver protokoll}\cite{lsp} alapján információt nyújt IDE-knek, szövegszerkesztőknek, és egyéb programoknak a hozzá tartozó nyelvről.
 
 Mivel a szövegszerkesztők bármilyen nyelvhez támogatást nyújthatnak egy közös protokoll által, így nyilvánvaló, hogy bármilyen szolgáltatás, ami a protokollon kívül esik, nem lesz elérhető egy nyelvhez sem. Van továbbá néhány funkció, amit viszont a szövegszerkesztőtől magától nem várhatunk el -- például egy ablaképítő, amivel gra\-fi\-ku\-san szerkeszthetjük az alkalmazás ablakait, messze áll a szövegszerkesztéstől, és nem is lenne értelme a létezésének egy csupasz, nyelvtámogatás nélküli szövegszerkesztőben. Ne feledjük, hogy a nyelvtámogatás maga csak egy mellékfunkció; a szövegszerkesztő attól függetlenül szöveget még mindig tud szerkeszteni, de ha ablaképítőt is tartalmazna egy ilyen szoftver, akkor a szoftver fele használhatatlan, és így értelmetlen lenne anélkül, hogy magunk ki nem bővítenénk azt.
 
 Egy másik megoldás, amit észrevehetünk az oldalon, az az, hogy a Rust támogatást meglévő IDE-kbe építjük bele, mint pl. Eclipse, IntelliJ IDEA, vagy Visual Studio. Bár azt gondolnánk, hogy ez közelebb áll a célunkhoz, valójában néhány szempontból pontosan annak az ellentéte igaz: ilyen esetben a Rust mint másodrendű nyelv kerül bele az IDE-ba -- Eclipse és IntelliJ IDEA esetén a Java alá, Visual Studio esetén a C\# alá főként. Észrevehetjük, hogy támogatás szempontjából nem a nyelvi támogatás lett komplexebb, hanem a szoftver maga; a Rust szempontjából egy 'felturbózott' szövegszerkesztővel dolgozunk, és nem egy IDE-vel.
 
-Legutoljára láthatjuk, hogy a Rust-hoz bizony készült már egynéhány IDE, ezek a \emph{Ride}\footnote{\texttt{https://github.com/madeso/ride}} és a \emph{SolidOak}\footnote{\texttt{https://github.com/oakes/SolidOak}}. Sajnálatos módon ezek sem felelnek meg a követelményeinknek: nem csak, hogy mindkettő gyérebb a funkcionalitás oldalon, mint egy mezei szö\-veg\-szer\-kesz\-tő, de továbbá mindkét projekt halott is. A szakdolgozat írása idejében a Ride két éve volt utoljára módosítva, és nem ajánlott produkciós környezetben, a SolidOak Github oldala pedig archiválva lett.
+Legutoljára láthatjuk, hogy a Rust-hoz bizony készült már egynéhány IDE, ezek a \emph{Ride}\cite{ride} és a \emph{SolidOak}\cite{solidoak}. Sajnálatos módon ezek sem felelnek meg a követel\-mé\-nye\-ink\-nek: nem csak, hogy mindkettő gyérebb a funkcionalitás oldalon, mint egy mezei szö\-veg\-szer\-kesz\-tő, de továbbá mindkét projekt halott is. A szakdolgozat írása idejében a Ride két éve volt utoljára módosítva, és nem ajánlott produkciós környezetben, a SolidOak Github oldala pedig archiválva lett.
 
 \Section{Egy Rust IDE fejlesztése}
 
-Az előző elemzésekből kitűnhet, hogy nyelvi szinten a Rust készen áll már akár most is egy Rust-centrikus IDE-re. Továbbá, a Rust Forge oldalán látható, hogy tervekben áll\footnote{\texttt{https://forge.rust-lang.org/ides.html}} egy hivatalos daemon fejlesztése, ami tovább segíteni a leendő IDE-k munkáját egy Rust projekt kezelésében, és a lefordító módosítása, hogy támogassa az inkrementális és lusta fordítást, és hogy különféle hibák ellenére is végigmenjen a fordítási folyamaton.
+Az előző elemzésekből kitűnhet, hogy nyelvi szinten a Rust készen áll már akár most is egy Rust-centrikus IDE-re. %Továbbá, a Rust Forge oldalán látható, hogy tervekben áll\footnote{\texttt{https://forge.rust-lang.org/ides.html}} egy hivatalos daemon fejlesztése, ami tovább segíteni a leendő IDE-k munkáját egy Rust projekt kezelésében, és a lefordító módosítása, hogy támogassa az inkrementális és lusta fordítást, és hogy különféle hibák ellenére is végigmenjen a fordítási folyamaton.
 
 Így a feladat a következő: létrehozni egy olyan IDE-t, ami a Rust nyelvet elsőrendű nyelvként kezeli, és annak előnyeire játszik. Fontos, hogy az IDE kényelmessé tegye a nyelvben való programozást, így a fejlesztés során gyakori kell, hogy legyen az iterálás a felhasználó munkamenetén. Fejleszteni kell majd olyan szolgáltatásokat, amik köny\-nyebbé teszik a nyelv sajátosságainak megértését, például az utalások é\-let\-tar\-ta\-má\-nak nyomonkövetését (ezeket a sajátosságokat majd bővebben bemutatjuk a \ref{sec:rust} fe\-je\-zet\-ben), és amik figyelmeztetnek a gyakori Rust programozási hibákra.
 
