--- a/dolgozat/irodalomjegyzek/irodalom.tex
+++ b/dolgozat/irodalomjegyzek/irodalom.tex
@@ -1,6 +1,30 @@
 \begin{thebibliography}{x}
 \addcontentsline{toc}{chapter}{\bibname}
 
+\bibitem{ideyet}
+\textit{Are We Ide Yet?}, weboldal, \texttt{https://areweideyet.com/}, Internet, 2019.
+
+\bibitem{lsp}
+\textit{Language Server Protocol}, weboldal, \texttt{https://microsoft.github.io/language\-server-protocol/}, Internet, 2019.
+
+\bibitem{ride}
+\textit{Ride}, Github repository, \texttt{https://github.com/madeso/ride}, Internet, 2019.
+
+\bibitem{solidoak}
+\textit{SolidOak}, Github repository, \texttt{https://github.com/oakes/SolidOak}, Internet, 2019.
+
+\bibitem{rls}
+\textit{Rust Language Server}, Github repository, \texttt{https://github.com/rust-lang\-nursery/rls}, Internet, 2019.
+
+\bibitem{racer}
+\textit{Rust Auto-Complete-er}, Github repository, \texttt{https://github.com/racer\-rust/racer}, Internet, 2019.
+
+\bibitem{clippy}
+\textit{Clippy}, Github repository, \texttt{https://github.com/rust-lang-nursery/rust\-clippy}, Internet, 2019.
+
+\bibitem{rustfmt}
+\textit{rustfmt}, Github repository, \texttt{https://github.com/rust-lang-nursery/rustfmt}, Internet, 2019.
+
 % NOTE: E helyett majd lehet inkább BiBTeX-ezünk.
 
 \end{thebibliography}
