Rust fejezet bevezetés, történelem megkezdve.

--- a/dolgozat/fejezetek/2_rust.tex
+++ b/dolgozat/fejezetek/2_rust.tex
@@ -1,6 +1,26 @@
 \Chapter{A Rust programozási nyelv}
 \label{sec:rust}
 
+A \textit{Rust} egy multi-paradigmájú rendszer-programozási nyelv,\cite{oldpage:main},
+ami a biztonságos kódra helyez hangsúlyt, főként a programok biztonságos párhuzamosítására.\cite{mostlysafety, oldpage:faq:project}
+Bár a Rust szintaktikailag hasonlít a C++-ra,\cite{rustvscpp} úgy van megtervezve, hogy jobb memória-biztonságot nyújtson a C++-hoz legalább hasonló vagy jobb teljesítmények mellett.
+
+A nyelvet eredetileg \textit{Graydon Hoare} tervezte a \textit{Mozilla Research-nél}, Dave Herman, Brendan Eich, és mások támogatásával.\cite{rust:designedby}
+A tervezők tovább fejlesztették a nyelvet a Servo internetböngésző-motor\cite{servo:ars, servo:mozilla} és a Rust fordító fejlesztése alatt.
+A fordító maga nyílt forráskódú, duplán licenszelt az MIT és Apache licenszek alatt.
+
+A következőekben leírjuk a Rust nyelv történetét, összehasonlítjuk a C++ nyelvvel,
+majd bemutatjuk a Rust olyan egyedi tulajdonságait, amik az összehasonlításban nem jöttek elő.
+
+\Section{A Rust története}
+
+A nyelv 2006-ban nőtt ki Mozilla alkalmazott Graydon Hoare egy személyes pro\-jekt\-jé\-ből,\cite{oldpage:faq:project}.
+Bár a nyelv nevének eredetére nem emlékszik, azt állítja, hogy a projekt a nevét a rozsdagombák családja után kapta.\cite{rust:name}
+
+\Section{Összehasonlítás a C++ nyelvvel}
+
+\Section{A Rust további egyedi tulajdonságai}
+
 % TODO: Leírni a nyelv szerepét, létrejöttének történetét, jellemző felhasználási módjait!
 
 % TODO: Röviden összehasonlítani a C/C++ nyelvekkel (és még a többi olyannal amivel aktuálisan lehet).
