--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -77,3 +77,67 @@ howpublished = "{\url{https://rust-lang.org/}}",
 year = "{2018}",
 note = "{Ez a Rust jelenlegi weboldala. Elérve: 2019}"
 }
+
+@Misc{mostlysafety,
+author = "Graydon Hoare",
+title = "{Rust is mostly safety}",
+howpublished = "{\url{https://graydon2.dreamwidth.org/247406.html}}",
+year = "{2016}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{oldpage:faq:project,
+author = "{Rust fejlesztők}",
+title = "{Frequently Asked Questions -- The Rust Programming Language}",
+howpublished = "{\url{https://prev.rust-lang.org/en-US/faq.html#project}}",
+year = "{2011}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{rustvscpp,
+author = "Alexey Lozovsky",
+title = "{Rust vs. C++ Comparison}",
+howpublished = "{\url{https://www.apriorit.com/dev-blog/520-rust-vs-c-comparison}}",
+year = "{2018}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{rust:designedby,
+author = "Noel",
+title = "{The Rust Language}",
+howpublished = "{\url{http://lambda-the-ultimate.org/node/4009}}",
+year = "{2010}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{servo:ars,
+author = "Peter Bright",
+title = "{Samsung teams up with Mozilla to build browser engine for multicore machines}",
+howpublished = "{\url{https://arstechnica.com/information-technology/2013/04/samsung-teams-up-with-mozilla-to-build-browser-engine-for-multicore-machines/}}",
+year = "{2013}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{servo:mozilla,
+author = "Brian Anderson and Patrick Walton and {mások}",
+title = "{Design}",
+howpublished = "{\url{https://github.com/servo/servo/wiki/Design}}",
+year = "{2012}",
+note = "{A Servo projekt Github wiki oldala. Elérve: 2019}"
+}
+
+@Misc{reference:undefined_behaviour,
+author = "{Rust fejlesztők}",
+title = "{Behavior considered undefined -- The Rust Reference}",
+howpublished = "{\url{https://doc.rust-lang.org/reference/behavior-considered-undefined.html}}",
+year = "{2014}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{rust:name,
+author = "kibwen",
+title = "{Internet archaeology: the definitive, end-all source for why Rust is named "Rust"}",
+howpublished = "{\url{https://www.reddit.com/r/rust/comments/27jvdt/internet_archaeology_the_definitive_endall_source/}}",
+year = "{2014}",
+note = "{Online, elérve: 2019}"
+}
