--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -1,6 +1,6 @@
 @Misc{ideyet,
 author = "Manuel Hoffman",
-title = "{Are We Ide Yet?}",
+title = "{Are We (I)DE Yet?}",
 howpublished = "{\url{https://areweideyet.com/}}",
 year = "{2015}",
 note = "{Online, elérve: 2019}"
@@ -139,5 +139,117 @@ author = "kibwen",
 title = "{Internet archaeology: the definitive, end-all source for why Rust is named "Rust"}",
 howpublished = "{\url{https://www.reddit.com/r/rust/comments/27jvdt/internet_archaeology_the_definitive_endall_source/}}",
 year = "{2014}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{interview:graydon,
+author = "Abel Avram",
+title = "{Interview on Rust, a Systems Programming Language Developed by Mozilla}",
+howpublished = "{\url{https://www.infoq.com/news/2012/08/Interview-Rust}}",
+year = "{2012}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{talk:servo,
+author = "Graydon Hoare",
+title = "{Technology from the past come to save the future from itself}",
+howpublished = "{\url{http://venge.net/graydon/talks/intro-talk-2.pdf}}",
+year = "{2010}",
+note = "{Bemutatva a Mozilla Annual Summit-on. A megadott link egy absztrakt a találkozón előadott prezentációból. Elérve: 2019}"
+}
+
+@Misc{rust:compilerwork,
+author = "Graydon Hoare",
+title = "{Rust progress}",
+howpublished = "{\url{https://web.archive.org/web/20140815054745/http://blog.mozilla.org/graydon/2010/10/02/rust-progress/}}",
+year = "{2010}",
+note = "{A blog már nem érhető el, a link az archivált verzióra mutat. Elérve: 2019}"
+}
+
+@Misc{rust:successful_compile,
+author = "Graydon Hoare",
+title = "{[rust-dev] stage1/rustc builds}",
+howpublished = "{\url{https://mail.mozilla.org/pipermail/rust-dev/2011-April/000330.html}}",
+year = "{2011}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{rust:first_release,
+author = "Brian Anderson",
+title = "{[rust-dev] The Rust compiler 0.1 is unleashed}",
+howpublished = "{\url{https://mail.mozilla.org/pipermail/rust-dev/2012-January/001256.html}}",
+year = "{2012}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{rust:1_0:blog,
+author = "{Rust Core fejlesztők}",
+title = "{Announcing Rust 1.0}",
+howpublished = "{\url{https://blog.rust-lang.org/2015/05/15/Rust-1.0.html}}",
+year = "{2015}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{rust:version_history,
+author = "{Rust Core fejlesztők}",
+title = "{Version History}",
+howpublished = "{\url{https://github.com/rust-lang/rust/blob/master/RELEASES.md}}",
+year = "{2012}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{rust:release_cycle,
+author = "Aaron Turon",
+title = "{Rust 1.0: Scheduling the trains}",
+howpublished = "{\url{https://blog.rust-lang.org/2014/12/12/1.0-Timeline.html}}",
+year = "{2014}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{rust:stability,
+author = "Aaron Turon and Niko Matsakis",
+title = "{Stability as a Deliverable}",
+howpublished = "{\url{https://blog.rust-lang.org/2014/10/30/Stability.html}}",
+year = "{2014}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{dr_dobb,
+author = "Andrew Binstock",
+title = "{The Rise And Fall of Languages in 2013}",
+howpublished = "{\url{http://www.drdobbs.com/jvm/the-rise-and-fall-of-languages-in-2013/240165192}}",
+year = "{2014}",
+note = "{"Rust is widely viewed as a remarkably elegant language." Online, elérve: 2019}"
+}
+
+@Misc{so_2015,
+author = "{Stack Overflow csapata}",
+title = "{Stack Overflow Developer Survey 2015}",
+howpublished = "{\url{https://insights.stackoverflow.com/survey/2015#tech-super}}",
+year = "{2015}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{so_2016,
+author = "{Stack Overflow csapata}",
+title = "{Stack Overflow Developer Survey 2016 Results}",
+howpublished = "{\url{https://insights.stackoverflow.com/survey/2016#technology-most-loved-dreaded-and-wanted}}",
+year = "{2016}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{so_2017,
+author = "{Stack Overflow csapata}",
+title = "{Stack Overflow Developer Survey 2017}",
+howpublished = "{\url{https://insights.stackoverflow.com/survey/2017#most-loved-dreaded-and-wanted}}",
+year = "{2017}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{so_2018,
+author = "{Stack Overflow csapata}",
+title = "{Stack Overflow Developer Survey 2018}",
+howpublished = "{\url{https://insights.stackoverflow.com/survey/2018#technology-most-loved-dreaded-and-wanted-languages}}",
+year = "{2018}",
 note = "{Online, elérve: 2019}"
 }
