--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -253,3 +253,51 @@ howpublished = "{\url{https://insights.stackoverflow.com/survey/2018#technology-
 year = "{2018}",
 note = "{Online, elérve: 2019}"
 }
+
+@Misc{compare:cpp:zerocost,
+author = "Bjarne Stroustrup",
+title = "{Foundations of C++}",
+howpublished = "{\url{http://www.stroustrup.com/ETAPS-corrected-draft.pdf}}",
+year = "{2012}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{compare:rust:zerocost, 
+author = "Aaron Turon",
+title = "{Abstraction without overhead: traits in Rust}",
+howpublished = "{\url{https://blog.rust-lang.org/2015/05/11/traits.html}}",
+year = "{2015}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{compare:cpp:move_constructor,
+author = "{C++ Reference szerkesztői}",
+title = "{Move constructors}",
+howpublished = "{\url{https://en.cppreference.com/w/cpp/language/move_constructor}}",
+year = "{2016}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{compare:rust:move_constructor,
+author = "{Rust fejlesztők}",
+title = "{Ways Variables and Data Interact: Move -- What is Ownership?}",
+howpublished = "{\url{https://doc.rust-lang.org/book/ch04-01-what-is-ownership.html#ways-variables-and-data-interact-move}}",
+year = "{2016}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{compare:rust:smart_pointers,
+author = "{Rust fejlesztők}",
+title = "{Smart Pointers}",
+howpublished = "{\url{https://doc.rust-lang.org/book/ch15-00-smart-pointers.html#smart-pointers}}",
+year = "{2016}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{compare:rust:raw_pointers,
+author = "{Rust fejlesztők}",
+title = "{Dereferencing a Raw Pointer -- Unsafe Rust}",
+howpublished = "{\url{https://doc.rust-lang.org/book/ch19-01-unsafe-rust.html#dereferencing-a-raw-pointer}}",
+year = "{2017}",
+note = "{Online, elérve: 2019}"
+}
