--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -301,3 +301,19 @@ howpublished = "{\url{https://doc.rust-lang.org/book/ch19-01-unsafe-rust.html#de
 year = "{2017}",
 note = "{Online, elérve: 2019}"
 }
+
+@Misc{cargo:doc,
+author = "{Rust fejlesztők}",
+title = "{The Cargo Book}",
+howpublished = "{\url{https://doc.rust-lang.org/cargo/index.html}}",
+year = "{2017}",
+note = "{Online, elérve: 2019}"
+}
+
+@Misc{cargo:blog,
+author = "Alex Crichton",
+title = "{Cargo: Rust community's crate host}",
+howpublished = "{\url{https://blog.rust-lang.org/2014/11/20/Cargo.html}}",
+year = "{2014}",
+note = "{Online, elérve: 2019}"
+}
