--- a/dolgozat/fejezetek/2_rust.tex
+++ b/dolgozat/fejezetek/2_rust.tex
@@ -93,7 +93,7 @@ a Cargo egyszerűvé teszi a projektkezelést:\cite{cargo:blog}
     felhasználói beavatkozás nélkül véghezviszi.
     
     \item Minden Cargo-t használó projekt függőségeit a Cargo egy \texttt{Cargo.lock} fájlban tárolja,
-    így biztosítva azt hogy mind az együttműködő fejlesztők, és mind a felhasználók ugyanazt a kódot fordítják.
+    így biztosítva azt hogy mind az együttműködő fejlesztők, és mind a felhasználók ugyanazt a kódot fordítják.\cite{cargo:dependency_management}
 
     \item Minden projekt megadhatja a Cargo-nak, hogy fordítsa azt, és a Cargo kezeli a függőségek lefordítását is
     ugyanezen alapon.
