--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -317,3 +317,11 @@ howpublished = "{\url{https://blog.rust-lang.org/2014/11/20/Cargo.html}}",
 year = "{2014}",
 note = "{Online, elérve: 2019}"
 }
+
+@Misc{cargo:dependency_management,
+author = "Yehuda Katz",
+title = "{Cargo: predictable dependency management}",
+howpublished = "{\url{https://blog.rust-lang.org/2016/05/05/cargo-pillars.html}}",
+year = "{2016}",
+note = "{Online, elérve: 2019}"
+}
